# televerket-martin

./: .gitignore  README.md  dbt_project.yml  example.env  package-lock.yml  pyproject.toml
docs/: sesjon_01.md  sesjon_01_slides.md  session_01.html  session_01.md  session_02.html  session_02.md  syntaks.md  televerket.css
input_data/: billing_invoices.parquet  billing_payments.parquet  catalog_products.parquet  crm_contracts.parquet  crm_customers.parquet  network_incidents.parquet  network_service_activations.parquet
models/: __sources.yml  docs.md
models/mart/: _marts.yml  mart_customer_360.sql
models/staging/: _staging.yml  stg_billing__invoices.sql  stg_billing__payments.sql  stg_catalog__products.sql  stg_crm__contracts.sql  stg_crm__customers.sql  stg_network__incidents.sql  stg_network__service_activations.sql
models/standardize/: std__crm_customers.sql
