[project]
name = "televerket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core>=1.11.9",
    "dbt-bigquery (>=1.11.1,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
]

[dependency-groups]
dev = [
    "sqlfluff>=4.1.0",
]
